# bankruptcy-ai-platform

./: .codeassistantmodes  .env.example  .gitignore  Makefile  README.md  cursor_prompt_rbac.md  docker-compose.yml  docker-compose.yml.save  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.codeassistant/: mcp.json
agents/: README.md  __init__.py  requirements.txt
ai-core/: Dockerfile  database.py  main.py  pyproject.toml  requirements.txt  setup.py  worker.py
ai-core/agents/: consultant.py  document_generator.py  ocr_extraction.py  qualification.py
ai-core/alembic/versions/: 003_rag_v2.py
ai-core/llm/: __init__.py  base.py  config.py  exceptions.py  llm_config.yaml  logger.py  pricing.yaml  router.py
ai-core/llm/providers/: __init__.py  claude.py  deepseek.py  gemini.py  gigachat.py  openai_provider.py  yandexgpt.py
ai-core/ocr/: engine.py
ai-core/prompts/: chatbot_qualification.py  consultant_system.txt
ai-core/rag/: config.py  models.py  pipeline.py
ai-core/rag/evaluation/: metrics.py
ai-core/rag/generation/: context_builder.py  generator.py
ai-core/rag/ingestion/: chunker.py  embedder.py  indexer.py  parser.py  pipeline.py
ai-core/rag/retrieval/: fts_search.py  hybrid.py  query_processor.py  reranker.py  vector_search.py
ai-core/routers/: consultant.py
ai-core/tests/: test_consultant.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
crm-frontend/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
docs/: ADR.md  API_CONTRACTS.md  DOCUMENT_MODULE.md  LEAD_COLLECTOR.md  (+4 more)
(+380 files in other folders)
