[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-core"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.8.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "gigachat",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "arize-phoenix-otel",
    "openinference-instrumentation-langchain",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm*", "agents*", "rag*", "ocr*", "prompts*"]

[tool.setuptools.package-data]
"llm" = ["*.yaml"]
